--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -33,3 +33,6 @@ typing_extensions==4.9.0
 uvicorn==0.27.1
 wheel==0.42.0
 nltk==3.8.1
+spacy>=3.0.0,<4.0.0
+en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
+errant==3.0.0
