--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,4 +3,4 @@ WORKDIR /code
 ADD requirements.txt /code/requirements.txt
 RUN pip install --no-cache-dir --progress-bar off --upgrade -r /code/requirements.txt
 COPY . /code
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80", "--reload"]
