--- a/app/requirements.txt
+++ b/app/requirements.txt
@@ -36,3 +36,5 @@ nltk==3.8.1
 spacy>=3.0.0,<4.0.0
 en_core_web_sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl
 errant==3.0.0
+evaluate==0.4.3
+sacrebleu==2.5.1
